<resources>
    <string name="app_name">Netflix</string>
    <string name="s_ries">Séries</string>
    <string name="filmes">Filmes</string>
    <string name="minha_lista">Minha lista</string>
    <string name="fic_o_cient_fica">Ficção Científica</string>
    <string name="suspense">Suspense</string>
    <string name="mist_rio">Mistério</string>
    <string name="assistir">Assistir</string>
    <string name="detalhes">DETALHES</string>
    <string name="button_minha_lista">MINHA LISTA</string>
    <string name="lan_amento">Lançamento</string>
</resources>