<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/capa"
        android:layout_width="match_parent"
        android:layout_height="317dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/capa" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toStartOf="@+id/series"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/guidelineEsquerda"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/series"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s_ries"
        android:textColor="@color/menu_navegacao"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/logo"
        app:layout_constraintEnd_toStartOf="@+id/filmes"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toTopOf="@+id/logo" />

    <TextView
        android:id="@+id/filmes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filmes"
        android:textColor="@color/menu_navegacao"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/series"
        app:layout_constraintEnd_toStartOf="@+id/minhaLista"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/series"
        app:layout_constraintTop_toTopOf="@+id/series" />

    <TextView
        android:id="@+id/minhaLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minha_lista"
        android:textColor="@color/menu_navegacao"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/filmes"
        app:layout_constraintEnd_toEndOf="@id/guidelineDireita"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/filmes"
        app:layout_constraintTop_toTopOf="@+id/filmes" />

    <ImageView
        android:id="@+id/logoFilme"
        android:layout_width="100dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop"
        app:srcCompat="@drawable/logomovie" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22
" />

    <TextView
        android:id="@+id/ficcaoCientifica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fic_o_cient_fica"
        android:textColor="@color/menu_navegacao"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/suspense"
        app:layout_constraintEnd_toStartOf="@+id/suspense"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/guidelineEsquerda"
        app:layout_constraintTop_toTopOf="@+id/suspense" />

    <TextView
        android:id="@+id/suspense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/suspense"
        android:textColor="@color/menu_navegacao"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/misterio"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ficcaoCientifica"
        app:layout_constraintTop_toTopOf="@+id/guidelineBottom" />

    <TextView
        android:id="@+id/misterio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mist_rio"
        android:textColor="@color/menu_navegacao"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/suspense"
        app:layout_constraintEnd_toEndOf="@id/guidelineDireita"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/suspense"
        app:layout_constraintTop_toTopOf="@+id/suspense" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEsquerda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineDireita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <Button
        android:id="@+id/assistir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:drawableLeft="@drawable/icexecutar"
        android:text="@string/assistir"
        app:layout_constraintEnd_toStartOf="@+id/buttonDetalhes"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonMinhaLista"
        app:layout_constraintTop_toBottomOf="@+id/suspense" />

    <Button
        android:id="@+id/buttonMinhaLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:drawableTop="@drawable/icadicionar"
        android:padding="0dp"
        android:text="@string/button_minha_lista"
        app:layout_constraintBottom_toBottomOf="@+id/assistir"
        app:layout_constraintEnd_toStartOf="@+id/assistir"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/guidelineEsquerda"
        app:layout_constraintTop_toTopOf="@+id/assistir" />

    <Button
        android:id="@+id/buttonDetalhes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:drawableTop="@drawable/icinfo"
        android:padding="0dp"
        android:text="@string/detalhes"
        app:layout_constraintBottom_toBottomOf="@+id/assistir"
        app:layout_constraintEnd_toEndOf="@id/guidelineDireita"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/assistir"
        app:layout_constraintTop_toTopOf="@+id/assistir" />

    <TextView
        android:id="@+id/lancamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/lan_amento"
        android:textColor="@color/menu_navegacao"
        app:layout_constraintStart_toStartOf="@+id/guidelineEsquerda"
        app:layout_constraintTop_toBottomOf="@+id/assistir" />

    <ImageView
        android:id="@+id/transcendence"
        android:layout_width="85dp"
        android:layout_height="56dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toStartOf="@+id/aOrigem"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/guidelineEsquerda"
        app:layout_constraintTop_toBottomOf="@+id/lancamento"
        app:srcCompat="@drawable/f1" />

    <ImageView
        android:id="@+id/aOrigem"
        android:layout_width="85dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="@+id/transcendence"
        app:layout_constraintEnd_toStartOf="@+id/interstelar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/transcendence"
        app:layout_constraintTop_toTopOf="@+id/transcendence"
        app:srcCompat="@drawable/f2" />

    <ImageView
        android:id="@+id/interstelar"
        android:layout_width="85dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="@+id/aOrigem"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDireita"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/aOrigem"
        app:layout_constraintTop_toTopOf="@+id/aOrigem"
        app:srcCompat="@drawable/f3" />

    <TextView
        android:id="@+id/meuNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="Eduardo Dias Amaral"
        android:textColor="@color/menu_navegacao"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDireita"
        app:layout_constraintStart_toStartOf="@+id/guidelineEsquerda"
        app:layout_constraintTop_toBottomOf="@+id/aOrigem" />
</androidx.constraintlayout.widget.ConstraintLayout>